--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "daisyui": "^5.3.8",
     "framer-motion": "^12.23.24",
     "next": "16.0.0-canary.17",
     "next-auth": "5.0.0-beta.25",
